[Create UI] 계정 설정 비밀번호 변경 뷰 완료. 기능 진행 중

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,6 +4,374 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="16dp"
     tools:context=".activity.ChangePasswordActivity">
+
+    <TextView
+        android:id="@+id/tv_change_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:letterSpacing="-0.04"
+        android:text="비밀번호 변경"
+        android:textColor="#292929"
+        android:textSize="19sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageView
+        android:id="@+id/img_back_change_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_back"
+        app:layout_constraintBottom_toBottomOf="@id/tv_change_password"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/tv_change_password"
+        app:layout_constraintTop_toTopOf="@id/tv_change_password" />
+
+    <ScrollView
+        android:id="@+id/sv_change_password"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="44dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toTopOf="@id/tv_complete_change_password"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_change_password">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_now_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosanscjkkr_regular"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="8sp"
+                android:text="현재 비밀번호"
+                android:textColor="@color/greyish_brown"
+                android:textSize="16sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+            <EditText
+                android:id="@+id/et_now_password"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/et_area"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:hint="현재 비밀번호"
+                android:includeFontPadding="false"
+                android:inputType="textEmailAddress"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="9sp"
+                android:maxLines="1"
+                android:paddingLeft="15dp"
+                android:paddingTop="11dp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_now_password" />
+
+            <ImageView
+                android:id="@+id/img_erase_now_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="17dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/et_now_password"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/et_now_password"
+                app:srcCompat="@drawable/btn_erase" />
+
+            <ImageView
+                android:id="@+id/img_warning_now_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                app:layout_constraintLeft_toLeftOf="@id/et_now_password"
+                app:layout_constraintTop_toBottomOf="@id/et_now_password"
+                app:srcCompat="@drawable/ic_warning" />
+
+            <TextView
+                android:id="@+id/tv_now_password_empty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="1sp"
+                android:text="현재 비밀번호를 입력해주세요!"
+                android:textColor="@color/reddish"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="@id/img_warning_now_password"
+                app:layout_constraintLeft_toRightOf="@id/img_warning_now_password"
+                app:layout_constraintBottom_toBottomOf="@id/img_warning_now_password"/>
+
+            <TextView
+                android:id="@+id/tv_warning_now_password_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="1sp"
+                android:text="영문+숫자 최소 8자 이상 입력해주세요!"
+                android:textColor="@color/reddish"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="@id/img_warning_now_password"
+                app:layout_constraintLeft_toRightOf="@id/img_warning_now_password"
+                app:layout_constraintBottom_toBottomOf="@id/img_warning_now_password"/>
+
+            <TextView
+                android:id="@+id/tv_not_now_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="1sp"
+                android:text="현재 비밀번호가 일치하지 않아요!"
+                android:textColor="@color/reddish"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="@id/img_warning_now_password"
+                app:layout_constraintLeft_toRightOf="@id/img_warning_now_password"
+                app:layout_constraintBottom_toBottomOf="@id/img_warning_now_password"/>
+
+            <TextView
+                android:id="@+id/tv_new_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="58dp"
+                android:fontFamily="@font/notosanscjkkr_regular"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="8sp"
+                android:text="새 비밀번호"
+                android:textColor="@color/greyish_brown"
+                android:textSize="16sp"
+                app:layout_constraintTop_toBottomOf="@id/et_now_password"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="영문+숫자 최소 8자리 이상 입력해주세요."
+                android:textSize="14sp"
+                android:textColor="#a7a7a7"
+                android:layout_marginRight="5dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tv_new_password"
+                app:layout_constraintBottom_toBottomOf="@id/tv_new_password"/>
+
+            <EditText
+                android:id="@+id/et_new_password"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/et_area"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:hint="새 비밀번호"
+                android:includeFontPadding="false"
+                android:inputType="textPassword"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="9sp"
+                android:maxLines="1"
+                android:paddingLeft="15dp"
+                android:paddingTop="11dp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintTop_toBottomOf="@id/tv_new_password"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
+
+            <ImageView
+                android:id="@+id/img_erase_new_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="17dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/et_new_password"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/et_new_password"
+                app:srcCompat="@drawable/btn_erase" />
+
+            <EditText
+                android:id="@+id/et_new_password_confirm"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/et_area"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:hint="새 비밀번호 확인"
+                android:includeFontPadding="false"
+                android:inputType="textPassword"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="9sp"
+                android:maxLines="1"
+                android:paddingLeft="15dp"
+                android:paddingTop="11dp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintTop_toBottomOf="@id/et_new_password"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
+
+            <ImageView
+                android:id="@+id/img_erase_new_password_onemore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="17dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/et_new_password_confirm"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/et_new_password_confirm"
+                app:srcCompat="@drawable/btn_erase" />
+
+            <ImageView
+                android:id="@+id/img_warning_new_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="11dp"
+                android:visibility="gone"
+                app:layout_constraintLeft_toLeftOf="@id/et_new_password_confirm"
+                app:layout_constraintTop_toBottomOf="@id/et_new_password_confirm"
+                app:srcCompat="@drawable/ic_warning" />
+
+            <TextView
+                android:id="@+id/tv_warning_new_password_empty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="1sp"
+                android:text="새 비밀번호를 입력해주세요!"
+                android:textColor="@color/reddish"
+                android:textSize="14sp"
+                android:visibility="gone"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintTop_toTopOf="@id/img_warning_new_password"
+                app:layout_constraintBottom_toBottomOf="@id/img_warning_new_password"
+                app:layout_constraintLeft_toRightOf="@id/img_warning_new_password"/>
+
+            <TextView
+                android:id="@+id/tv_warning_new_password_onemore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="1sp"
+                android:text="새 비밀번호를 한 번 더 입력해주세요!"
+                android:textColor="@color/reddish"
+                android:textSize="14sp"
+                android:visibility="gone"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintTop_toTopOf="@id/img_warning_new_password"
+                app:layout_constraintBottom_toBottomOf="@id/img_warning_new_password"
+                app:layout_constraintLeft_toRightOf="@id/img_warning_new_password"/>
+
+            <TextView
+                android:id="@+id/tv_warning_new_password_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="1sp"
+                android:text="영문+숫자 최소 8자리 이상 입력해주세요!"
+                android:textColor="@color/reddish"
+                android:textSize="14sp"
+                android:visibility="gone"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintTop_toTopOf="@id/img_warning_new_password"
+                app:layout_constraintBottom_toBottomOf="@id/img_warning_new_password"
+                app:layout_constraintLeft_toRightOf="@id/img_warning_new_password"/>
+
+            <TextView
+                android:id="@+id/tv_warning_new_password_same"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="1sp"
+                android:text="비밀번호가 일치하지 않아요!"
+                android:textColor="@color/reddish"
+                android:textSize="14sp"
+                android:visibility="gone"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintTop_toTopOf="@id/img_warning_new_password"
+                app:layout_constraintBottom_toBottomOf="@id/img_warning_new_password"
+                app:layout_constraintLeft_toRightOf="@id/img_warning_new_password"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </ScrollView>
+
+    <ImageView
+        android:id="@+id/img_blur_change_password"
+        android:layout_width="0dp"
+        android:layout_height="123dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/btn_gradient" />
+
+    <TextView
+        android:id="@+id/tv_complete_change_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/btn_green"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:gravity="center_horizontal"
+        android:includeFontPadding="false"
+        android:lineSpacingExtra="9sp"
+        android:paddingTop="15dp"
+        android:paddingBottom="14dp"
+        android:text="완료"
+        android:textColor="#ffffff"
+        android:textSize="19sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/activity_join_step2_top_blur"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/activity_join_step2_sv"
+        app:srcCompat="@drawable/top_blur" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
