--- a/app/src/main/res/layout/fragment_main_view_pager3.xml
+++ b/app/src/main/res/layout/fragment_main_view_pager3.xml
@@ -7,7 +7,7 @@
     tools:context=".fragment.MainViewPager3Fragment">
 
     <ImageView
-        android:id="@+id/imageView12"
+        android:id="@+id/img_main_editor_pick_theme3"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
@@ -16,62 +16,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView46"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="37dp"
-        android:fontFamily="@font/notosanscjkkr_regular"
-        android:includeFontPadding="false"
-        android:letterSpacing="-0.02"
-        android:lineSpacingExtra="10sp"
-        android:text="힘껏 달리기만 하다"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView12"
-        app:layout_constraintTop_toTopOf="@+id/imageView12" />
-
-    <TextView
-        android:id="@+id/textView47"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanscjkkr_regular"
-        android:includeFontPadding="false"
-        android:letterSpacing="-0.02"
-        android:lineSpacingExtra="10sp"
-        android:text="번아웃"
-        android:textColor="#b2cdff"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="@+id/textView46"
-        app:layout_constraintTop_toBottomOf="@+id/textView46" />
-
-    <TextView
-        android:id="@+id/textView48"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanscjkkr_regular"
-        android:includeFontPadding="false"
-        android:letterSpacing="-0.02"
-        android:lineSpacingExtra="10sp"
-        android:text="이 온 당신을"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        app:layout_constraintStart_toEndOf="@+id/textView47"
-        app:layout_constraintTop_toTopOf="@+id/textView47" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanscjkkr_regular"
-        android:includeFontPadding="false"
-        android:letterSpacing="-0.02"
-        android:lineSpacingExtra="10sp"
-        android:text="다시 걷게 할 한 문장"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="@+id/textView47"
-        app:layout_constraintTop_toBottomOf="@+id/textView48" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
