--- a/app/src/main/res/layout/activity_curator_info.xml
+++ b/app/src/main/res/layout/activity_curator_info.xml
@@ -41,31 +41,29 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0">
 
-
                 <ImageView
-                    android:id="@+id/img_library_setting"
+                    android:id="@+id/img_back_curator_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
-                    android:src="@drawable/my_theme_bookmark_setting"
-                    app:layout_constraintHorizontal_bias="1"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:src="@drawable/btn_back"
+                    android:layout_marginTop="20.5dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"/>
+
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/img_library_profile"
+                    android:id="@+id/img_curator_profile"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:layout_marginTop="17dp"
+                    android:layout_marginTop="76dp"
                     android:background="@color/soft_green"
-                    app:layout_constraintBottom_toTopOf="@id/tx_library_username"
+                    app:layout_constraintBottom_toTopOf="@id/tv_curator_username"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/img_library_setting" />
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <TextView
-                    android:id="@+id/tx_library_username"
+                    android:id="@+id/tv_curator_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="9dp"
@@ -77,11 +75,11 @@
                     android:textSize="17sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/img_library_profile" />
+                    app:layout_constraintTop_toBottomOf="@id/img_curator_profile" />
 
 
                 <TextView
-                    android:id="@+id/tx_library_contents"
+                    android:id="@+id/tx_curators_keyword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -93,11 +91,11 @@
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tx_library_username" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_curator_username" />
 
 
                 <TextView
-                    android:id="@+id/tx_library_keyword"
+                    android:id="@+id/tx_curators_contents"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
@@ -109,7 +107,7 @@
                     android:textSize="13sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tx_library_contents" />
+                    app:layout_constraintTop_toBottomOf="@id/tx_curators_keyword" />
 
                 <CheckBox
                     android:id="@+id/cb_curator_subs_info"
@@ -122,7 +120,7 @@
                     android:textColor="#ffffff"
                     android:layout_marginTop="13dp"
                     android:layout_marginBottom="8dp"
-                    app:layout_constraintTop_toBottomOf="@id/tx_library_keyword"
+                    app:layout_constraintTop_toBottomOf="@id/tx_curators_contents"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
