--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -59,7 +59,7 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_marginTop="17dp"
-                    android:background="@drawable/ic_launcher_background"
+                    android:src="@drawable/join_img_mongle"
                     app:layout_constraintBottom_toTopOf="@id/tx_library_username"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -122,6 +122,7 @@
 
 
             <com.google.android.material.tabs.TabLayout
+                app:tabIndicator="@null"
                 android:id="@+id/titleLayout"
                 android:layout_width="match_parent"
                 android:layout_height="67dp"
